# opengl-engine

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
.cache/clangd/index/: _fixes.hpp.A3830A043530A742.idx  _vectorize.hpp.F09C5672649BBAEB.idx  camera.cpp.CFF26AA2E9229C70.idx  camera.h.823F98AF6F2E94E2.idx  common.hpp.E9375169EC9DBD6E.idx  compute_common.hpp.7C693D6E33CDB502.idx  compute_vector_relational.hpp.84F73A1DA2FAC7AA.idx  constants.hpp.615F049D8CD1A79C.idx  constants.inl.8D7C1FE4B89A8BB5.idx  display.cpp.A51E32CCB4D24735.idx  display.h.835EA345009CF5A5.idx  epsilon.hpp.14A34A616998D355.idx  epsilon.inl.CCE38863E2D1BEC3.idx  exponential.hpp.A5C5DFBDE27AD09D.idx  func_common.inl.213BFC5ADD9459EF.idx  func_exponential.inl.EC8D31B4FA7FA636.idx  func_geometric.inl.F5F3F7DD0D31ED72.idx  func_integer.inl.A736B3CAD64A3368.idx  func_matrix.inl.D7EF72FCD7B4B6C0.idx  func_packing.inl.059421494221E779.idx  func_trigonometric.inl.D3C4B6E62EBCABDE.idx  func_vector_relational.inl.FD4AB32D4023CDD9.idx  fwd.hpp.BD8FB1AC9737CC49.idx  geometric.hpp.CA84EFA1D896C918.idx  glad.c.7A985F4A5375A6C6.idx  glad.h.B5027AFC943C5EA7.idx  glfw3.h.4403BA17E3203A25.idx  (+193 more)
include/utility/: camera.h  display.h  light.h  loader.h  model.h  renderer.h  shader.h  texture.h  utility.h  window.h
shaders/: creeper.fs  ground.fs  redstonelamp.fs  redstonelamp.vs
shaders/old/: cubeShader.fs  cubeShader.vs  lightCube.fs  lightCube.vs  mixCubeShader.fs
src/: main.cpp
src/utility/: camera.cpp  display.cpp  loader.cpp  renderer.cpp  shader.cpp  texture.cpp  utility.cpp  window.cpp
